force-app/main/default/objects/SBQQ__Cost__c/fields/SBQQ__Active__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to indicate whether the cost is active.</description>
        <inlineHelpText>Select the checkbox to activate the cost.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>