force-app/main/default/objects/SBQQ__Cost__c/fields/SBQQ__Product__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product associated with this cost.</description>
        <inlineHelpText>Product associated with this cost.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Costs</relationshipLabel>
        <relationshipName>Costs</relationshipName>
        <type>Lookup</type>
    </CustomField>